feat(java): java模块功能整体完善
1